added rainbow mode

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <div class="button-container">
             <button class="button" id="toggle-lines">Toggle Grid Lines</button>
             <button class="button" id="clear">Clear Canvas</button>
+            <button class="button" id="rainbow">Rainbow</button>
         </div>
         
     </div>    
