added color wheel

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <button class="button" id="toggle-lines">Toggle Grid Lines</button>
             <button class="button" id="clear">Clear Canvas</button>
             <button class="button" id="rainbow">Rainbow</button>
+            <input type="color" id="colour-picker" value="#ff0000">
         </div>
         
     </div>    
