--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
             <button class="button" id="clear">Clear Canvas</button>
             <button class="button" id="rainbow">Rainbow</button>
             <input type="color" id="colour-picker" value="#ff0000">
+            <input type="range" id="slider" min="1" max="64" value="16">
+            <div id="output">16 x 16</div>
         </div>
         
     </div>    
