--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
             <input type="color" id="colour-picker" value="#ff0000">
             <input type="range" id="slider" min="1" max="64" value="16">
             <div id="output">16 x 16</div>
+            <button class="button" id="eraser">Eraser</button>
+            <button class="button" id="colour-button">Colour</button>
         </div>
         
     </div>    
